--- a/introducao_data_science.ipynb
+++ b/introducao_data_science.ipynb
@@ -130,6 +130,36 @@
    "source": [
     "notas.notas.mode()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0    26818\n",
+       "3.0    20047\n",
+       "5.0    13211\n",
+       "3.5    13136\n",
+       "4.5     8551\n",
+       "2.0     7551\n",
+       "2.5     5550\n",
+       "1.0     2811\n",
+       "1.5     1791\n",
+       "0.5     1370\n",
+       "Name: notas, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas.notas.value_counts()"
+   ]
   }
  ],
  "metadata": {
